--- a/packages/featureserver/package.json
+++ b/packages/featureserver/package.json
@@ -22,7 +22,7 @@
   "license": "Apache-2.0",
   "dependencies": {
     "@esri/proj-codes": "^2.6.0",
-    "@mapbox/geojsonhint": "^3.0.0",
+    "geojson-validation": "^1.0.2",
     "@terraformer/spatial": "^2.0.7",
     "chalk": "^4.0.0",
     "chroma-js": "^2.0.0",
